# easyeda-simulation-engine

./: CMakeLists.txt  README.md
config/: spinit
config/ngspice/: BSIMBULK107.osdi  BSIMCMG.osdi  analog.cm  asmhemt.osdi  bjt505t.osdi  digital.cm  psp103_nqs.osdi  r2_cmc.osdi  r3_cmc.osdi  spice2poly.cm  table.cm  vbic_4T_et_cf.osdi  xtradev.cm  xtraevt.cm
src/cirSim/include/: circmatrix.h  matrixsolver.h  ngspice_de.h  sharedspice.h  simulator.h
src/cirSim/include/CircuitElm/e-elements/: analogclock.h  e-clocked_device.h  e-element.h  e-node.h  e-pin.h
src/cirSim/include/CircuitElm/e-elements/active/: e-bjt.h  e-diode.h  e-mosfet.h
src/cirSim/include/CircuitElm/e-elements/outputs/: e-led.h
src/cirSim/include/CircuitElm/e-elements/passive/: e-coil.h  e-reactive.h  e-resistor.h
src/cirSim/include/CircuitElm/elements/: circuit.h  compbase.h  component.h  connector.h  dialed.h  iopin.h  ioport.h  itemlibrary.h  label.h  linkable.h  node.h  pin.h  updatable.h
src/cirSim/include/CircuitElm/elements/components/: comp2pin.h  iocomponent.h  linkedComponent.h  logicFamily.h  logiccomponent.h  wire.h
src/cirSim/include/CircuitElm/elements/components/active/: BJT.h  diac.h  diode.h  mosfet.h  mux_analog.h  op_amp.h  scr.h  triac.h  volt_reg.h  zener.h
src/cirSim/include/CircuitElm/elements/components/logic/: bcdbase.h  bcdto7s.h  bcdtodec.h  bincounter.h  buffer.h  bus.h  dac.h  dectobcd.h  demux.h  dynamic_memory.h  flipflopbase.h  flipflopd.h  flipflopjk.h  flipfloprs.h  flipflopt.h  fulladder.h  function.h  gate.h  gate_and.h  gate_or.h  gate_xor.h  latchd.h  lm555.h  mux.h  sevensegment_bcd.h  shiftreg.h  sim_adc.h
src/cirSim/include/CircuitElm/elements/components/meters/: ammeter.h  circularBuffer.h  meter.h  (+1 more)
src/cirSim/include/CircuitElm/elements/componentselector/: componentselector.h
src/cirSim/include/CircuitElm/elements/subcircuits/: board.h  chip.h  logicsubc.h  module.h  packagepin.h  shield.h  subcircuit.h  subpackage.h
src/cirSim/include/CircuitElm/elmData/: dataChannel.h
src/cirSim/include/CircuitElm/properties/: boolProp.h  comProperty.h  doubleProp.h  intProp.h  numProp.h  strBaseProp.h  stringProp.h  utils.h
src/cirSim/include/memory/: memdata.h  memtable.h
src/cirSim/src/: CMakeLists.txt  circmatrix.cpp  matrixsolver.cpp  ngspice_de.cpp  simulator.cpp
src/cirSim/src/CircuitElm/e-elements/: analogclock.cpp  e-clocked_device.cpp  e-element.cpp  e-node.cpp  e-pin.cpp
src/cirSim/src/CircuitElm/e-elements/active/: e-bjt.cpp  e-diode.cpp  e-mosfet.cpp
src/cirSim/src/CircuitElm/e-elements/outputs/: e-led.cpp
src/cirSim/src/CircuitElm/e-elements/passive/: e-coil.cpp  e-reactive.cpp  e-resistor.cpp
src/cirSim/src/CircuitElm/elements/: circuit.cpp  compbase.cpp  component.cpp  connector.cpp  dialed.cpp  iopin.cpp  ioport.cpp  itemlibrary.cpp  linkable.cpp  node.cpp  pin.cpp  updatable.cpp
src/cirSim/src/CircuitElm/elements/components/: comp2pin.cpp  iocomponent.cpp  linkedComponent.cpp  logicFamily.cpp  logiccomponent.cpp
src/cirSim/src/CircuitElm/elements/components/active/: BJT.cpp  diac.cpp  diode.cpp  mosfet.cpp  mux_analog.cpp  op_amp.cpp  scr.cpp  triac.cpp  volt_reg.cpp  zener.cpp
src/cirSim/src/CircuitElm/elements/components/logic/: bcdbase.cpp  bcdto7s.cpp  bcdtodec.cpp  bincounter.cpp  buffer.cpp  bus.cpp  dac.cpp  dectobcd.cpp  demux.cpp  dynamic_memory.cpp  flipflopbase.cpp  flipflopd.cpp  flipflopjk.cpp  flipfloprs.cpp  flipflopt.cpp  fulladder.cpp  function.cpp  gate.cpp  gate_and.cpp  gate_or.cpp  gate_xor.cpp  latchd.cpp  lm555.cpp  mux.cpp  sevensegment_bcd.cpp  shiftreg.cpp  sim_adc.cpp
src/cirSim/src/CircuitElm/elements/components/meters/: ammeter.cpp  meter.cpp  probe.cpp
src/cirSim/src/CircuitElm/elements/components/micro/: dht22.cpp  ds1621.cpp  ds18b20.cpp  sr04.cpp
src/cirSim/src/CircuitElm/elements/components/other/: connbase.cpp  socket.cpp  tunnel.cpp
src/cirSim/src/CircuitElm/elements/components/outputs/: audio_out.cpp  lamp.cpp
src/cirSim/src/CircuitElm/elements/components/outputs/leds/: led.cpp  ledbar.cpp  ledbase.cpp  ledmatrix.cpp  ledrgb.cpp  ledsmd.cpp  max72xx_matrix.cpp  sevensegment.cpp  ws2812.cpp
src/cirSim/src/CircuitElm/elements/components/outputs/motors/: dcmotor.cpp  servo.cpp  stepper.cpp
src/cirSim/src/CircuitElm/elements/components/passive/reactive/: capacitor.cpp  capacitorbase.cpp  elcapacitor.cpp  inductor.cpp  reactive.cpp  transformer.cpp
src/cirSim/src/CircuitElm/elements/components/passive/resist_sensors/: ldr.cpp  rtd.cpp  strain.cpp  thermistor.cpp  thermistorbase.cpp
src/cirSim/src/CircuitElm/elements/components/passive/resistors/: potentiometer.cpp  resistor.cpp  resistordip.cpp  varresbase.cpp  varresistor.cpp
src/cirSim/src/CircuitElm/elements/components/sources/: battery.cpp  clock-base.cpp  clock.cpp  csource.cpp  currsource.cpp  fixedvolt.cpp  ground.cpp  rail.cpp  varsource.cpp  voltsource.cpp  wavegen.cpp
src/cirSim/src/CircuitElm/elements/components/switches/: keypad.cpp  mech_contact.cpp  push.cpp  push_base.cpp  relay.cpp  switch.cpp  switch_base.cpp  switchdip.cpp
src/cirSim/src/CircuitElm/elements/componentselector/: componentselector.cpp
src/cirSim/src/CircuitElm/elements/subcircuits/: board.cpp  chip.cpp  logicsubc.cpp  module.cpp  packagepin.cpp  shield.cpp  subcircuit.cpp  subpackage.cpp
src/cirSim/src/CircuitElm/elmData/: dataChannel.cpp
src/cirSim/src/CircuitElm/properties/: boolProp.cpp  comProperty.cpp  numProp.cpp  strBaseProp.cpp  stringProp.cpp  utils.cpp
src/cirSim/src/memory/: memdata.cpp  memtable.cpp
src/server/: server.cpp
src/server/include/: IMessageHandler.h  NgSpiceMessageHandler.h  ServerMessageHandler.h  SimMessage.hpp  SimMessageHandler.h  common.h  eventDispatcher.h
src/server/include/API/Parser/: JsonParser.hpp
src/server/include/API/validators/: BusinessRuleValidator.h
src/server/src/: CMakeLists.txt
src/server/src/API/validators/: BusinessRuleValidator.cpp
src/server/src/config/: NgSpiceMessageHandler.cpp  ServerMessageHandler.cpp  SimMessage.cpp  SimMessageHandler.cpp  eventDispatcher.cpp
(+53 files in other folders)
